Add run tests with coverage step

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,3 +22,7 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
+    - name: Run tests with coverage
+      run: |
+        coverage run -m pytest
+        coverage report
