--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -U pytest
+        pip install -U pytest pylint coverage
         pip install pylint
     - name: Analysing the code with pylint
       run: |
