--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
       with:
-        name: coverage-report
+        name: coverage-report-${{ matrix.python-version }}-${{ github.run_id }}
         path: htmlcov
     - name: Enforce minimum coverage (95%)
       run: |
