--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,6 +26,11 @@ jobs:
       run: |
         coverage run -m pytest
         coverage report
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report-${{ matrix.python-version }}-${{ github.run_id }}
+        path: htmlcov
     - name: Enforce minimum coverage (95%)
       run: |
         coverage report --fail-under=95
